refac: don't display home page when traversing forums, cetner homepage, fixed overflow of text, better definition for nested comments

--- a/frontend/src/styling/buttons.css
+++ b/frontend/src/styling/buttons.css
@@ -36,4 +36,5 @@ div.voting {
 
 .post {
     grid-column: 2;
+    align-self: center;
 }
