--- a/frontend/src/styling/home.css
+++ b/frontend/src/styling/home.css
@@ -2,3 +2,7 @@
     margin-top: 50px;
     text-align: center;
 }
+.dropdown {
+    height: auto;
+    overflow-y: scroll;
+  }
